[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="mesajes" type="Node2D" parent="."]
scale = Vector2( 3, 3 )

[node name="Puntuacion" type="Label" parent="mesajes"]
margin_left = 66.6667
margin_top = 5.33333
margin_right = 106.667
margin_bottom = 19.3333
text = "0"

[node name="Message" type="Label" parent="mesajes"]
margin_left = 5.33333
margin_top = 82.6667
margin_right = 147.334
margin_bottom = 96.6667
text = "El Juegazo del Calamar"
align = 1

[node name="StartButton" type="Button" parent="."]
margin_left = 48.0
margin_top = 480.0
margin_right = 89.0
margin_bottom = 500.0
rect_scale = Vector2( 9.14879, 9.93749 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="start_game" from="." to="." method="_on_HUD_start_game"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
